@@ -66,6 +66,7 @@ D. Docs about JS interface
 5. Docs about MGL commands: 'print' and 'echo'
 6. Docs about mgl_pen_delta(), SetPenDelta(), 'pen_delta' --> Font settings
 8. Docs about MGL command 'scanfile' and ScanFile()
+9. Docs about 	inline void SetList(long n, ...) -- NOTE about '.'
 10. Update FLTK. Qt and UDAV figures
 12. Example of mglDraw and multi-threading (--> Basic usage) + correct links to @ref{mglDraw class}
 14. Docs about 'apde' ???
